P1/css/style.css
* {
  margin: 0;
}

:root {
  --primary-color: #3734a9;
}

.wrapper {
  display: flex;
  flex-direction: row;
  height: 100%;
  background-color: #f8f9fa;
}

.content {
  /* margin-left: 15.5em;
  margin-left: max(15.5em, 15.5%); */
}

.content-wrapper {
  width: 100%;
  height: 100vh;
}

.content-wrapper .top {
  /* margin-left: 15.5em;
  margin-left: max(15.5em, 16%); */
  /* margin-left: 16.5%; */
  height: 10%;
  z-index: 999;
}

.content-wrapper .content {
  height: 90%;
  background-color: #f8f9fa;
}

.logo {
  margin-top: 1vh;
  margin-left: 0.5em;
  margin-bottom: 0.5em;
}

.nav-link {
  color: #3734a9;
}

.nav-pills .nav-link.active,
.nav-pills .show > .nav-link {
  background-color: white;
  font-weight: bold;
  color: #3734a9;
}

.content .home-title {
  text-align: left;
  color: #3734a9;
  font-weight: bold;
}

.card .card-text {
  text-align: center;
}

.card {
  background-color: var(--primary-color);
  cursor: pointer;
}

p.card-text {
  color: white;
}

.btn-group img {
  opacity: 0.5;
}

.btn-general {
  width: 35px;
  height: 35px;
}

#like {
  content: url("../assets/pics/heart.png");
  -webkit-appearance: none;
  opacity: 0.5;
}

#like:hover {
  width: 40px;
  height: 40px;
  opacity: 1;
}

#like:checked {
  width: 40px;
  height: 40px;
  opacity: 1;
}

#comment {
  content: url("../assets/pics/comment.png");
  -webkit-appearance: none;
}

#comment:hover {
  width: 40px;
  height: 40px;
}

#comment:checked {
  width: 40px;
  height: 40px;
}

#findout {
  content: url("../assets/pics/question.png");
  -webkit-appearance: none;
}

#findout:hover {
  width: 40px;
  height: 40px;
}

#findout:checked {
  width: 40px;
  height: 40px;
}

.btn-group {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.tab-content {
  margin-right: 3em;
}

.profile-item {
  background-color: red;
}

.navbar-right {
  margin-right: 3em;
}

.navbar {
  background-color: var(--primary-color);
}

.searchbar {
  display: flex;
}

.searchbar .btn {
  margin-left: 0.5em;
}

.wrapper .navbar-brand {
  display: flex;
}

.navbar h3 {
  font-weight: bold;
  margin-left: 0.2em;
}

.wrapper span {
  font-weight: normal;
}

.far,
.fas {
  width: 25px;
  height: 25px;
  color: white;
}

.gradient-custom {
  /* fallback for old browsers */
  background: #89f7fe;

  /* Chrome 10-25, Safari 5.1-6 */
  background: -webkit-linear-gradient(to top, rgba(137, 247, 254, 1), rgba(102, 166, 255, 1));

  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  background: linear-gradient(to top, rgba(137, 247, 254, 1), rgba(102, 166, 255, 1))
}

.BorderRadius{
  border-radius: 1000px;
}

.navbar-abs {
  position: absolute;
  width:100%;
  background:transparent;
}

a {
    text-decoration: none;
}

.btn-sml {
  border-radius: 8px;
}

.nav-item{
  padding-left: 20px;
}

.no-break-label {
  white-space: nowrap;
}

.use-flex{
  display: flex;
  align-items: center;
  justify-content: center;
}

